--- a/nlp.html
+++ b/nlp.html
@@ -71,11 +71,11 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
+<h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -155,7 +155,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -220,7 +220,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Alpharetta, GA Atlanta</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879415'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879415'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -240,11 +240,11 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
-<h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/e4fb25af-1a3c-4232-b0b0-3015403c219b'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/e4fb25af-1a3c-4232-b0b0-3015403c219b'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -274,7 +274,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-11</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 21 Stunden ... Tomes GmbH has a job opening for Research Software Engineer - ML & NLP in 
 eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?...</p>
@@ -369,7 +369,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
@@ -379,7 +379,7 @@ Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Norweigan 
 in Barcelona. Review all of the job details and apply today!</p>
@@ -431,11 +431,11 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -480,7 +480,7 @@ India.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rimeto/bdca896f-e7e7-4f27-a894-41b47c729c63'>Rimeto - Software Engineer, Search Ranking & NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rimeto/bdca896f-e7e7-4f27-a894-41b47c729c63'>Rimeto - Software Engineer, Search Ranking & NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Bonus Points. Experience with ElasticSearch, GraphQL, or React. Background in 
 Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
