--- a/data-architect.html
+++ b/data-architect.html
@@ -135,7 +135,7 @@ dig?...</p>
 <p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-cloud-presales-architect-12620'>Data Center & Cloud PreSales Architect - Wipro Careers</a></h5> 
+<h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-cloud-presales-architect-12620'>Data Center & Cloud PreSales Architect - Wipro Careers</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -167,7 +167,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -236,7 +236,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999697757305-azure-data-platform-solution-architect'>Version 1 Azure Data Platform Solution Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999697757305-azure-data-platform-solution-architect'>Version 1 Azure Data Platform Solution Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -288,7 +288,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -314,7 +314,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
